--- a/src/app/LMS/training-requests/training-requests.component.html
+++ b/src/app/LMS/training-requests/training-requests.component.html
@@ -60,7 +60,7 @@
                         <div class="topbar-up row">
                             <div class="col-md-12 col-lg-12">
                                 <div class="row">
-                                    <div class="col-md-7 col-lg-9">
+                                    <div class="col-md-6 col-lg-7">
                                         <div class="card textbox-15 shadow-lg">
                                             <div class="card-body p-0">
                                                 <div class="alert bg-blue border-0 rounded-0 m-0 d-flex align-items-center h-30">
@@ -86,31 +86,33 @@
                                             </div> <!-- end card-body-->
                                         </div>
                                     </div> <!-- end col-->
-                                    <div class="col-md-5 col-lg-3">
+                                    <div class="col-md-6 col-lg-5">
                                         <div class="card textbox-15 shadow-lg">
                                             <div class="card-body p-0">
-                                                <div class="alert bg-blue border-0 rounded-0 m-0 d-flex align-items-center">
-                                                    <div class="flex-grow-1 text-truncate font-type text-white fs-13">
-                                                        Training Hours
+                                                <div class="alert bg-blue border rounded-0 m-0">
+                                                    <div class="row align-items-center gy-3">
+                                                    <div class="col-sm">
+                                                        <h5 class="card-title mb-0 font-type text-white fs-13 fw-semibold">Training Hours</h5>
+                                                    </div>
                                                     </div>
                                                 </div>
-                                                <div class="row align-items-end mb-1">
+                                                <div class="row align-items-end mb-0">
                                                     <div class="col-sm-12">
                                                         <div class="p-2">
                                                         <div class="d-flex mb-1">
                                                                 <div class="flex-grow-1 ma-5">
-                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Assigned</span> - <span class="ms-2 font-type text-orange fw-semibold fs-14">{{assignedhrs}}hrs</span></p>
+                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Assigned:</span><span class="ms-2 font-type text-orange fw-semibold fs-14">{{assignedhrs}}hrs</span></p>
                                                                 </div>
                                                                 <div class="flex-shrink-0 ma-5">
-                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Target</span> - <span class="ms-2 font-type text-blue fw-semibold fs-14">{{TARGET_DURATION}}hrs</span></p>
+                                                                    <p class="fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Pending:</span><span class="ms-2 font-type text-orange fw-semibold fs-14">{{pendinghrs}}hrs</span></p>                  
                                                                 </div>
                                                         </div>
                                                         <div class="d-flex mb-0">
                                                             <div class="flex-grow-1 ma-5">
-                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Pending</span> - <span class="ms-2 font-type text-orange fw-semibold fs-14">{{pendinghrs}}hrs</span></p>
+                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Target:<span class="ms-2 font-type text-blue fw-semibold fs-14">{{TARGET_DURATION}}hrs</span></span></p>
                                                             </div>
                                                             <div class="flex-shrink-0 ma-5">
-                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Completed</span> - <span class="ms-2 font-type text-blue fw-semibold fs-14">{{COMPLETED_DURATION}}hrs</span></p>   
+                                                                <p class="fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Completed:<span class="ms-2 font-type text-blue fw-semibold fs-14">{{COMPLETED_DURATION}}hrs</span></span></p>
                                                             </div>
                                                          </div>
                                                         </div>
