--- a/src/app/LMS/vpapproval-trainings/vpapproval-trainings.component.html
+++ b/src/app/LMS/vpapproval-trainings/vpapproval-trainings.component.html
@@ -367,8 +367,8 @@
                                     </div>
                                     <div class="col-lg-12 pt-2">
                                             <div class="hstack gap-2 justify-content-center">
-                                            <button type="submit" class="btn btn-orange  right ms-auto nexttab nexttab font-type "(click)="validateEditForm(-1)" >Edit & Approve</button>
-                                            <button type="button" class="btn btn-blue  right nexttab nexttab font-type" (click)="submitEditForm(1)">Proceed without Editing</button>
+                                            <button type="submit" class="btn btn-orange  right ms-auto nexttab nexttab font-type "(click)="submitEditForm()">Approve</button>
+                                            <button type="button" class="btn btn-blue  right nexttab nexttab font-type" (click)="cancelEditForm()">Cancel</button>
                                             </div>
                                     </div>
                                 </div>
