--- a/src/app/payroll/account-payable/account-payable.component.html
+++ b/src/app/payroll/account-payable/account-payable.component.html
@@ -89,9 +89,9 @@
                                 <div class="row mb-1 margin-up-10">
                                             <div class="col-lg-4 col-sm-6 col-md-6 pt-2">
                                                     <h6 class="fs-12 font-type fw-semibold"><span>Company</span></h6>
-                                                    <select class="form-select font-type fs-12 textbox-15" id =exp_company (change)="FetchEmployeeList()">
+                                                    <select class="form-select font-type fs-12 textbox-15" id="exp_company" name="exp_company" (change)="FetchEmployeeList()">
                                                     <option  value="-1">All</option>
-                                                    <option *ngFor="let CompanyaccList of listCompanyacc" value="{{CompanyaccList.EMP_CODE}}">
+                                                    <option *ngFor="let CompanyaccList of listCompanyacc" value="{{CompanyaccList.KEY_ID}}">
                                                     {{CompanyaccList.DATA_VALUE}}
                                                     </option>
                                                     </select>       
@@ -100,7 +100,7 @@
                                                     <h6 class="font-type fs-12 fw-semibold"><span>Employee</span></h6>
                                                     <select class="form-select font-type fs-12 textbox-15" id ="exp_employee" (change)="ExpenseClaimFilter()">
                                                         <option  value="-1">All</option>
-                                                    <option *ngFor="let Listemployee of listemployee" value="{{Listemployee.EMP_ID}}">
+                                                    <option *ngFor="let Listemployee of listemployee" value="{{Listemployee.EMP_CODE}}">
                                                     {{Listemployee.EMP_NAME}}
                                                     </option>
                                                     </select>                      
@@ -323,7 +323,7 @@
                                                                 <th class="text-center fs-11">DSB St. Month<br> & Year</th>
                                                                 <th class="fs-11">Remarks</th>
                                                                 <th class="fs-11">Status</th>
-                                                                <th class="fs-11">Doc.</th>
+                                                                <th class="fs-11">Details</th>
                                                             </tr>
                                                         </thead>
                                                         <tbody class=" font-type">
