--- a/src/app/reports/grievance-log-report/grievance-log-report.component.html
+++ b/src/app/reports/grievance-log-report/grievance-log-report.component.html
@@ -40,8 +40,8 @@
                                                      <div class="col-md-3">
                                                         <h3 class="font-type fs-12"><span>Company</span></h3>
                                                         <div>
-                                                            <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="companycode"  name="comcode" id="comcode" (change)="fetch_griev_reportfilter()">
-                                                                <option value="-1" selected disabled>Select</option>
+                                                            <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="companycode"  name="comcode" id="comcode" >
+                                                                <option value="-1" [defaultSelected]>All</option>
                                                                 <option  *ngFor="let item of company" value="{{item.KEY_ID}}">
                                                                     {{item.DATA_VALUE}}
                                                                 </option>
@@ -51,8 +51,8 @@
                                                       
                                                     <div class="col-md-3">
                                                         <h3 class="font-type fs-12"><span>Year</span></h3>
-                                                        <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="year" (change)="onYearSelected()" name="year" id="year" (change)="fetch_griev_reportfilter()">                                                            
-                                                            <option value="-1" selected disabled>Select</option>
+                                                        <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="year" (change)="onYearSelected()" name="year" id="year">                                                            
+                                                            <option value="-1" [defaultSelected]>All</option>
                                                             <option  *ngFor="let item of yearlist" value="{{item.DISPLAY_FIELD}}">
                                                                 {{item.DISPLAY_FIELD}}
                                                             </option>
@@ -60,12 +60,20 @@
                                                     </div>
                                                     <div class="col-md-3">
                                                         <h3 class="font-type fs-12"><span>Status</span></h3>
-                                                        <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="statusval" name="statusval" id="statusval" (change)="fetch_griev_reportfilter()">                                                            
-                                                            <option value ="-1" selected disabled>Select</option>
-                                                            <option  *ngFor="let grievancests of liststatus" value="{{grievancests.KEY_ID}}" [hidden]="grievancests.KEY_ID==6" >
+                                                        <select class="form-select font-type fs-11" aria-label="Default select example" [(ngModel)]="statusval" name="statusval" id="statusval" >                                                            
+                                                            <option value ="-1" >All</option>
+                                                            <option  *ngFor="let grievancests of liststatus" value="{{grievancests.KEY_ID}}"  [selected]="grievancests.KEY_ID == 0" [hidden]="grievancests.KEY_ID==6" >
                                                                 {{grievancests.DATA_VALUE}}
                                                             </option>
                                                         </select>
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <label></label>
+                                                        <div>
+                                                            <button type="submit" style="margin-top: 4px!important;" class="btn btn-orange font-type fs-12 add-button text-white" (click)="fetch_griev_reportfilter()"> <i class="ri-file-text-line"></i>
+                                                                View Report
+                                                            </button>
+                                                        </div>
                                                     </div>
                                                     <!--end col-->
 
